--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,10 @@
 arrow==1.3.0 ; python_version >= "3.8" and python_version < "4"
 asgiref==3.7.2 ; python_version >= "3.8" and python_version < "4"
+astunparse==1.6.3 ; python_version >= "3.8" and python_version < "3.9"
 babel==2.13.0 ; python_version >= "3.8" and python_version < "4"
 backports-zoneinfo==0.2.1 ; python_version >= "3.8" and python_version < "3.9"
 binaryornot==0.4.4 ; python_full_version >= "3.8.0" and python_version < "4"
-black==23.9.1 ; python_version >= "3.8" and python_version < "4"
+black==24.4.0 ; python_version >= "3.8" and python_version < "4"
 cachetools==5.3.1 ; python_version >= "3.8" and python_version < "4"
 certifi==2023.7.22 ; python_version >= "3.8" and python_version < "4"
 chardet==5.2.0 ; python_version >= "3.8" and python_version < "4"
@@ -22,7 +23,7 @@ footing==0.1.4 ; python_full_version >= "3.8.0" and python_version < "4"
 formaldict==1.0.5 ; python_full_version >= "3.8.0" and python_version < "4"
 ghp-import==2.1.0 ; python_version >= "3.8" and python_version < "4"
 git-tidy==1.2.0 ; python_full_version >= "3.8.0" and python_version < "4"
-griffe==0.36.4 ; python_version >= "3.8" and python_version < "4"
+griffe==0.42.2 ; python_version >= "3.8" and python_version < "4"
 idna==3.4 ; python_version >= "3.8" and python_version < "4"
 importlib-metadata==6.8.0 ; python_version >= "3.8" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.0" and python_version < "4"
@@ -33,12 +34,13 @@ markdown==3.5 ; python_version >= "3.8" and python_version < "4"
 markupsafe==2.1.3 ; python_version >= "3.8" and python_version < "4"
 mergedeep==1.3.4 ; python_version >= "3.8" and python_version < "4"
 mkdocs-autorefs==0.5.0 ; python_version >= "3.8" and python_version < "4"
-mkdocs-material-extensions==1.2 ; python_version >= "3.8" and python_version < "4"
-mkdocs-material==9.4.4 ; python_version >= "3.8" and python_version < "4"
+mkdocs-material-extensions==1.3.1 ; python_version >= "3.8" and python_version < "4"
+mkdocs-material==9.5.18 ; python_version >= "3.8" and python_version < "4"
 mkdocs==1.5.3 ; python_version >= "3.8" and python_version < "4"
-mkdocstrings-python==1.7.2 ; python_version >= "3.8" and python_version < "4"
-mkdocstrings==0.23.0 ; python_version >= "3.8" and python_version < "4"
+mkdocstrings-python==1.9.2 ; python_version >= "3.8" and python_version < "4"
+mkdocstrings==0.24.3 ; python_version >= "3.8" and python_version < "4"
 mypy-extensions==1.0.0 ; python_version >= "3.8" and python_version < "4"
+nodeenv==1.8.0 ; python_full_version >= "3.8.0" and python_version < "4"
 packaging==23.2 ; python_version >= "3.8" and python_version < "4"
 paginate==0.5.6 ; python_version >= "3.8" and python_version < "4"
 pathspec==0.11.2 ; python_version >= "3.8" and python_version < "4"
@@ -51,6 +53,7 @@ psycopg2-binary==2.9.9 ; python_full_version >= "3.8.0" and python_version < "4"
 pygments==2.16.1 ; python_version >= "3.8" and python_version < "4"
 pymdown-extensions==10.3 ; python_version >= "3.8" and python_version < "4"
 pyproject-api==1.6.1 ; python_version >= "3.8" and python_version < "4"
+pyright==1.1.358 ; python_full_version >= "3.8.0" and python_version < "4"
 pytest-cov==4.1.0 ; python_full_version >= "3.8.0" and python_version < "4"
 pytest-django==4.5.2 ; python_full_version >= "3.8.0" and python_version < "4"
 pytest-dotenv==0.5.2 ; python_full_version >= "3.8.0" and python_version < "4"
@@ -67,7 +70,7 @@ regex==2023.10.3 ; python_version >= "3.8" and python_version < "4"
 requests-file==1.5.1 ; python_full_version >= "3.8.0" and python_version < "4"
 requests-toolbelt==1.0.0 ; python_full_version >= "3.8.0" and python_version < "4"
 requests==2.31.0 ; python_version >= "3.8" and python_version < "4"
-ruff==0.0.292 ; python_full_version >= "3.8.0" and python_version < "4"
+ruff==0.3.7 ; python_full_version >= "3.8.0" and python_version < "4"
 setuptools==68.2.2 ; python_version >= "3.8" and python_version < "4"
 six==1.16.0 ; python_version >= "3.8" and python_version < "4"
 sqlparse==0.4.4 ; python_version >= "3.8" and python_version < "4"
@@ -82,5 +85,6 @@ urllib3==2.0.6 ; python_version >= "3.8" and python_version < "4"
 virtualenv==20.24.5 ; python_version >= "3.8" and python_version < "4"
 watchdog==3.0.0 ; python_version >= "3.8" and python_version < "4"
 wcwidth==0.2.8 ; python_full_version >= "3.8.0" and python_version < "4"
+wheel==0.43.0 ; python_version >= "3.8" and python_version < "3.9"
 zipp==3.17.0 ; python_version >= "3.8" and python_version < "3.10"
 .
