--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ exclude_lines = [
     "pass",
     "pytest.mark.skip",
     "@(typing\\.)?overload",
+    "if TYPE_CHECKING:",
 ]
 show_missing = true
 fail_under = 100
@@ -64,7 +65,9 @@ git-tidy = "1.2.0"
 pytest = "7.4.2"
 pytest-cov = "4.1.0"
 pytest-dotenv = "0.5.2"
-pytest-mock = "3.1.0"
+pytest-django = "4.5.2"
+pytest-mock = "3.14.0"
+django-dynamic-fixture = "4.0.1"
 tox = "4.11.3"
 ruff = "0.3.7"
 pyright = "1.1.358"
@@ -77,9 +80,8 @@ setuptools = "*"
 poetry-core = "*"
 dj-database-url = "2.1.0"
 psycopg2-binary = "2.9.9"
-pytest-django = "4.5.2"
-django-dynamic-fixture = "4.0.1"
-
+typing-extensions = "4.11.0"
+django-stubs = "4.2.7"
 
 [tool.pytest.ini_options]
 xfail_strict = true
